Added post requests, fish sql now adding categories and filters
