# backend/Post/pkg/handler/createPost.go
@@ -7,6 +7,19 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
+// CreatePost godoc
+// @Summary Create post
+// @Description Creates post from current user
+// @Tags post
+// @Accept json
+// @Produce json
+// @Param nickname query string true "username" example("John Doe")
+// @Param req body model.CreatePostRequest true "request body"
+// @Failure 500 {string} string
+// @Failure 401 {string} string
+// @Failure 400 {string} string
+// @Success 200 {array} model.PostUser
+// @Router /post/create [post]
 func CreatePost(uc usecase.UseCase, repo repository.Repository) fiber.Handler {
 	return func(ctx *fiber.Ctx) error {
 		var req model.CreatePostRequest
