# backend/User/handler/changeNickname.go
@@ -1,13 +1,24 @@
 package handler
 
 import (
-	"github.com/fnaf-enjoyers/user/config"
-	"github.com/fnaf-enjoyers/user/model"
-	"github.com/fnaf-enjoyers/user/repository"
-	"github.com/fnaf-enjoyers/user/usecase"
+	"github.com/fnaf-enjoyers/user-service/config"
+	"github.com/fnaf-enjoyers/user-service/model"
+	"github.com/fnaf-enjoyers/user-service/repository"
+	"github.com/fnaf-enjoyers/user-service/usecase"
 	"github.com/gofiber/fiber/v2"
 )
 
+// ChangeNickname godoc
+// @Summary Change nickname
+// @Description Change nickname for current user
+// @Tags user
+// @Accept json
+// @Param req body model.NicknameJSON true "request body"
+// @Failure 500 {string} string
+// @Failure 401 {string} string
+// @Failure 400 {string} string
+// @Success 200 {string} string
+// @Router /user/nickname [post]
 func ChangeNickname(uc usecase.UseCase, repo repository.Repository) fiber.Handler {
 	return func(ctx *fiber.Ctx) error {
 		session, err := config.Store.Get(ctx)
