# backend/User/handler/createPost.go
@@ -1,13 +1,25 @@
 package handler
 
 import (
-	"github.com/fnaf-enjoyers/user/config"
-	"github.com/fnaf-enjoyers/user/model"
-	"github.com/fnaf-enjoyers/user/repository"
-	"github.com/fnaf-enjoyers/user/usecase"
+	"github.com/fnaf-enjoyers/user-service/config"
+	"github.com/fnaf-enjoyers/user-service/model"
+	"github.com/fnaf-enjoyers/user-service/repository"
+	"github.com/fnaf-enjoyers/user-service/usecase"
 	"github.com/gofiber/fiber/v2"
 )
 
+// CreatePost godoc
+// @Summary Create post
+// @Description Creates post from current user
+// @Tags post
+// @Accept json
+// @Produce json
+// @Param req body model.CreatePost true "request body"
+// @Failure 500 {string} string
+// @Failure 401 {string} string
+// @Failure 400 {string} string
+// @Success 200 {array} model.PostUser
+// @Router /post/create [post]
 func CreatePost(uc usecase.UseCase, repo repository.Repository) fiber.Handler {
 	return func(ctx *fiber.Ctx) error {
 		session, err := config.Store.Get(ctx)
