# backend/User/handler/getUserPosts.go
@@ -2,32 +2,35 @@ package handler
 
 import (
 	"github.com/fnaf-enjoyers/user-service/config"
+	"github.com/fnaf-enjoyers/user-service/usecase"
 	"github.com/gofiber/fiber/v2"
 )
 
-// LogOut godoc
-// @Summary Logs out user
-// @Description Destroys current session.
-// @Tags user
+// GetUserPosts godoc
+// @Summary Get user posts
+// @Description Gets posts from current user
+// @Tags post
 // @Failure 500 {string} string
 // @Failure 401 {string} string
-// @Success 200 {string} string
-// @Router /user/logout [post]
-func LogOut() fiber.Handler {
+// @Success 200 {array} model.PostUser
+// @Router /post/get [get]
+func GetUserPosts(uc usecase.UseCase) fiber.Handler {
 	return func(ctx *fiber.Ctx) error {
 		session, err := config.Store.Get(ctx)
 		if err != nil {
 			return ctx.Status(fiber.StatusInternalServerError).JSON(err.Error())
 		}
 
-		if nickname := session.Get("name"); nickname == nil {
+		nickname := session.Get("name")
+		if nickname == nil {
 			return ctx.Status(fiber.StatusUnauthorized).JSON("Unauthorized")
 		}
 
-		err = session.Destroy()
+		posts, err := uc.GetUserPosts(nickname.(string))
 		if err != nil {
 			return ctx.Status(fiber.StatusInternalServerError).JSON(err.Error())
 		}
-		return ctx.Status(fiber.StatusOK).JSON("success")
+
+		return ctx.Status(fiber.StatusOK).JSON(posts)
 	}
 }
