# backend/User/model/common.go
@@ -1,5 +1,5 @@
 package model
 
 type NicknameJSON struct {
-	Nickname string `json:"nickname"`
+	Nickname string `json:"nickname" example:"John Doe"`
 }
